# intoxicode

./: .gitignore  README.md  build.zig  build.zig.zon
.github/workflows/: release.yaml
examples/: 01_hello_world.??  02_branch.??  03_maybe.??  04_array.??  06_exceptions.??  07_awesome.??
examples/stdlib/: 01_min.??  02_max.??  03_pow.??
lang/: build.zig  syntax.md
lang/examples/: 03_maybe.??  04_array.??  05_functions.??  08_loop.??  09_directives.??  10_objects.??
lang/src/: main.zig  root.zig
lang/tests/: root.zig
src/: errors.zig  main.zig  root.zig
tests/: root.zig
web/: .env.example  .gitignore  Cargo.toml  package-lock.json  package.json  tailwind.config.js  tailwind.css
web/assets/: main.css  tailwind.css
web/assets/docs/: 03_doc_3.md  doc_1.md  doc_2.md  map.json
web/posts/: lava_chicken.txt
web/src/: app.css  app.html  docs.rs  main.rs
web/src/lib/: index.ts
web/src/lib/components/: release.svelte
web/src/lib/docs/: paths.ts
web/src/lib/docs/files/: array-functions.md  arrays.md  built-in-functions.md  directives.md  exception-handling.md  first.md  flow-control.md  fs.md  functions.md  home.md  http.md  imports.md  installation.md  objects.md  operators.md  socket.md  statements.md  stdlib.md  variables.md
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/api/eval/: +server.ts
web/src/routes/api/webhook/: +server.ts
web/src/routes/docs/: +layout.svelte  +page.ts
web/src/routes/docs/[...location]/: +page.svelte  +page.ts
web/src/routes/ide/: +page.svelte
web/src/routes/releases/: +page.svelte
web/static/assets/releases/: intoxicode-linux-x86_64  intoxicode-macos-x86_64
web/static/prism/: macchiato.css  prism.js
website/: Cargo.toml  package-lock.json  package.json
(+62 files in other folders)
