[package]
name = "web"
version = "0.1.0"
authors = ["Tathya <coding.tathya@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.4", optional = true }
dioxus = { version = "0.7.0-alpha.2", features = ["router", "fullstack"] }
gloo-net = "0.6.0"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"], optional = true }
tower-http = { version = "0.6.6", optional = true, features = ["fs", "trace"] }

[features]
default = ["web"]
web = ["dioxus/web"]
server = ["dioxus/server", "dep:axum", "dep:tokio", "dep:tower-http"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
# tower-http = ["dep:tower-http"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
